--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    >
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <EditText
+        android:layout_marginTop="8dp"
+        android:id="@+id/name_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter Your Name"
+        android:inputType="textCapWords"
+    />
+    <TextView
+        android:id="@+id/topping_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Topping"
+        android:textAllCaps="true"
+        android:textSize="16sp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        />
+
+    <CheckBox
+        android:id="@+id/choclate_checkbox_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="24dp"
+        android:text="choclate"
+        android:textAllCaps="true"
+        android:textSize="16sp"
+
+        />
+
+    <CheckBox
+        android:id="@+id/wipped_cream_checkbox_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="24dp"
+        android:textAllCaps="true"
+        android:text="Whipped Cream"
+        android:textSize="16sp"
+
+        />
 
     <TextView
         android:id="@+id/quantity_text"
@@ -42,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:text="0"
+            android:text="1"
             android:textAllCaps="true"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
@@ -59,10 +104,10 @@
 
     </LinearLayout>
     <TextView
-        android:id="@+id/price_text"
+        android:id="@+id/order_summary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Quantity"
+        android:text="Order Sumaary"
         android:textAllCaps="true"
         android:textSize="16sp"
         android:layout_marginTop="16dp"
@@ -71,10 +116,10 @@
         />
 
     <TextView
-        android:id="@+id/price_text_view"
+        android:id="@+id/order_summary_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="$ 0"
+        android:text="5"
         android:textColor="@android:color/black"
         android:textAllCaps="true"
         android:textSize="16sp"
@@ -93,4 +138,6 @@
         android:onClick="submitOrder"
         />
 
+
 </LinearLayout>
+</ScrollView>
