added punjabi language translation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,14 +16,14 @@
         android:id="@+id/name_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Your Name"
+        android:hint="@string/enter_your_name"
         android:inputType="textCapWords"
     />
     <TextView
         android:id="@+id/topping_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Topping"
+        android:text="@string/topping"
         android:textAllCaps="true"
         android:textSize="16sp"
         android:layout_marginTop="16dp"
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="24dp"
-        android:text="choclate"
+        android:text="@string/choclate"
         android:textAllCaps="true"
         android:textSize="16sp"
 
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="24dp"
         android:textAllCaps="true"
-        android:text="Whipped Cream"
+        android:text="@string/whipped_cream"
         android:textSize="16sp"
 
         />
@@ -56,7 +56,7 @@
         android:id="@+id/quantity_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Quantity"
+        android:text="@string/quantity"
         android:textAllCaps="true"
         android:textSize="16sp"
         android:layout_marginTop="16dp"
@@ -107,7 +107,7 @@
         android:id="@+id/order_summary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Order Sumaary"
+        android:text="@string/order_Sumary"
         android:textAllCaps="true"
         android:textSize="16sp"
         android:layout_marginTop="16dp"
@@ -132,7 +132,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Order"
+        android:text="@string/order"
         android:textAllCaps="true"
         android:textSize="16sp"
         android:onClick="submitOrder"
